@@ -26,6 +26,8 @@ v0.23 (release 2006.03.??):
   researched. (emh, Phil for suggestion :)
 - Convert Evil Tabs in source to (4) spaces.  Code should be easier to read and
   edit now.  (emh)
+- Changed savefile signature string to be less release-version based, now that
+  the format is churning a lot less. (Phil)
 
 v0.22 (release 2005.10.05):
   [To read about the save file compatibility policy, please see README.txt.]
